--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1960,4 +1960,5 @@
     <string name="default_xdrip_reminder_sound">Default xDrip+ reminder sound</string>
     <string name="custom_audio_file">Custom Audio file</string>
     <string name="android_ringtone_alarm">Android Ringtone/Alarm</string>
+    <string name="glucoseStartTime">00:00</string>
 </resources>
